@@ -11,30 +11,32 @@ travis_status = 1
 release_tests = 1
 irc           = irc://irc.perl.org/#native
 
+diag_preamble = | $post_diag = sub {
+diag_preamble = |   require Alien::FFI;
+diag_preamble = |   diag "version        = ", Alien::FFI->config('version');
+diag_preamble = |   diag "cflags         = ", Alien::FFI->cflags;
+diag_preamble = |   diag "cflags_static  = ", Alien::FFI->cflags_static;
+diag_preamble = |   diag "libs           = ", Alien::FFI->libs;
+diag_preamble = |   diag "libs_static    = ", Alien::FFI->libs_static;
+diag_preamble = | };
+
+[AlienBuild]
+
 [RemovePrereqs]
 remove = strict
 remove = warnings
 remove = base
 remove = Alien::MSYS
 
-remove = Test::Stream
-
 [Prereqs]
-Alien::Base::ModuleBuild = 0.022
+Alien::Base   = 0.038
 
 [Prereqs / ConfigureRequires]
-Alien::Base   = 0.022
+Alien::Build = 0.26
 
 [Prereqs / BuildRequires]
-Alien::Base   = 0.022
-
-[Prereqs / TestRequires]
-Alien::Base   = 0.022
+Alien::Build = 0.26
 
 [Author::Plicease::Upload]
 cpan = 1
 
-[Meta::Dynamic::Config]
-
-[PruneFiles]
-filename = t/compile_xs.t
