@@ -11,12 +11,22 @@ my $post_diag;
 
 $modules{$_} = $_ for qw(
   Alien::Base
-  Alien::Base::ModuleBuild
-  Module::Build
+  Alien::Build
+  Alien::Build::MM
+  ExtUtils::MakeMaker
+  Test2::Suite
+  Test::Alien
   Test::More
 );
 
-
+$post_diag = sub {
+  require Alien::FFI;
+  diag "version        = ", Alien::FFI->config('version');
+  diag "cflags         = ", Alien::FFI->cflags;
+  diag "cflags_static  = ", Alien::FFI->cflags_static;
+  diag "libs           = ", Alien::FFI->libs;
+  diag "libs_static    = ", Alien::FFI->libs_static;
+};
 
 my @modules = sort keys %modules;
 
